# SDAIA-Building-Gen-AI-Apps

01_architecture_fundamentals/lab/: lab_01_tokenization_cost.ipynb
01_architecture_fundamentals/lab/lab_02_api_client/starter/: cached_client.py  hello_hf.py  hf_client.py
02_function_calling_tools/homework/: README.md
02_function_calling_tools/lab/lab_02_calculator_tool/: README.md
02_function_calling_tools/lab/lab_02_calculator_tool/starter/: agent_core.py  calculator.py
02_function_calling_tools/lab/lab_04_mcp_server/: README.md
02_function_calling_tools/slides/output/: 02_architecting_for_scale.html
03_ai_agents/lab/lab_01_building_the_brain/: lab_01_building_the_brain.ipynb
03_ai_agents/lab/lab_02_the_newsroom/: README.md
03_ai_agents/lab/lab_03_the_broken_agent/: README.md
03_ai_agents/lab/lab_04_routing_agents/: README.md
03_ai_agents/lab/lab_04_routing_agents/agent/: routed_agent.py  (+1 more)
04_rag_foundations_data_pipelines/lab/: lab_01_ingestion_pipeline.ipynb  lab_02_embedding_pipeline.ipynb  lab_03_rag_service.ipynb  lab_04_advanced_retrieval.ipynb  lab_06_production_readiness.ipynb
04_rag_foundations_data_pipelines/lab/tests/: checks.py
project_starter/: .env  README.md  pyproject.toml  requirements.txt  test.py
project_starter/src/: RAG.py  config.py  logger.py  main.py
project_starter/src/agent/: observable_agent.py  orchestrator.py  specialists.py
project_starter/src/observability/: cost_tracker.py  loop_detector.py
project_starter/src/tools/: registry.py  search_tool.py
project_starter/tests/: verify_components.py
(+3 files in other folders)
